# renderer

./: .gitignore  CMakeLists.txt
assets/: container.mtl  mogus.mtl
include/: camera.hpp  file_io.hpp  gl_includes.hpp  main.hpp  model_loader.hpp  object.hpp  renderer.hpp  shaders.hpp  texture.hpp  transform.hpp
src/: CMakeLists.txt  camera.cpp  file_io.cpp  main.cpp  model_loader.cpp  object.cpp  renderer.cpp  shaders.cpp  texture.cpp
src/shaders/: fragment.frag  vertex.vert
